[project]
name = "cml-lab-builder"
version = "0.1.0"
description = "Lean MCP server for CML lab topology building"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
cml-lab-builder = "cml_lab_builder.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cml_lab_builder"]
